--- a/private-parking-reservation-front/src/App.css
+++ b/private-parking-reservation-front/src/App.css
@@ -4,8 +4,7 @@
     flex: 0 0 auto;
 }
 
-.
-{
+.navbar {
     width: 100%;
     height: 6.5%;
     background-color: #6574FF;
@@ -66,10 +65,10 @@
 .nav-to {
     color: #FFFFFF;
     border: 1px solid rgb(49, 45, 45);
-    width: 260px;
+    /* width: 260px;
     height: 50px;
     left: 510px;
-    top: 707px;
+    top: 707px; */
     margin-left: 30%;
     margin-top: 2%;
     box-sizing: border-box;
@@ -154,43 +153,4 @@ body {
     width: 50px;
     height: 25px;
     margin: 1em;
-}
-=======
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
