--- a/private-parking-reservation-front/src/App.css
+++ b/private-parking-reservation-front/src/App.css
@@ -26,7 +26,7 @@
     /* невидимая граница (понадобится для цвета при наведении/фокусе) */
     border-bottom: solid 3px transparent;
     /* размер строится из текста и отступов (без width/height) */
-    padding: 0.5em 1em;
+    /* padding: 0.5em 1em; */
     /* убедитесь, что достаточно контраста! */
     color: #ffffff;
     /* background-color: #9555af; */
@@ -43,7 +43,7 @@
     /* невидимая граница (понадобится для цвета при наведении/фокусе) */
     border-bottom: solid 3px transparent;
     /* размер строится из текста и отступов (без width/height) */
-    padding: 0.5em 1em;
+    /* padding: 0.5em 1em; */
     color: rgb(180, 163, 245);
     border-color: #ffffff;
     /* background-color: #9555af; */
@@ -103,7 +103,8 @@ hr {
 } */
 
 html {
-    width: 100%;
+    /* background: linear-gradient(to top, #7404A9, #6574FF); */
+    max-width: 100%;
     height: 100%;
 }
 
@@ -130,6 +131,12 @@ body {
     width: 100%;
 }
 
+.content {
+    padding-top: 8%;
+    padding-bottom: 8%;
+    background-color: white;
+}
+
 .auth {
     height: 100%;
     width: 100%;
@@ -137,8 +144,8 @@ body {
 }
 
 .app {
-    height: 100%;
-    width: 100%;
+    /* height: 100%;
+    width: 100%; */
 }
 
 .user-data {
